[project]
name = "autodocgenerator"
version = "0.7.1"
description = "This Project helps you to create docs for your projects"
authors = [
    {name = "dima-on", email = "sinica911@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4.0"

dependencies = [
    "annotated-types==0.7.0",
    "pyyaml==6.0.3",
    "anyio==4.12.1",
    "CacheControl==0.14.4",
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "cleo==2.1.0",
    "colorama==0.4.6",
    "crashtest==0.4.1",
    "distlib==0.4.0",
    "distro==1.9.0",
    "dulwich==0.25.2",
    "fastjsonschema==2.21.2",
    "filelock==3.20.3",
    "findpython==0.7.1",
    "google-auth==2.47.0",
    "google-genai==1.56.0",
    "groq==1.0.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "installer==0.7.0",
    "jaraco.classes==3.4.0",
    "jaraco.context==6.1.0",
    "jaraco.functools==4.4.0",
    "jiter==0.12.0",
    "keyring==25.7.0",
    "markdown-it-py==4.0.0",
    "mdurl==0.1.2",
    "more-itertools==10.8.0",
    "msgpack==1.1.2",
    "openai==2.14.0",
    "packaging==25.0",
    "pbs-installer==2026.1.14",
    "pkginfo==1.12.1.2",
    "platformdirs==4.5.1",
    "pyasn1==0.6.1",
    "pyasn1_modules==0.4.2",
    "pydantic==2.12.5",
    "pydantic_core==2.41.5",
    "Pygments==2.19.2",
    "pyproject_hooks==1.2.0",
    "python-dotenv==1.2.1",
    "pywin32-ctypes==0.2.3",
    "RapidFuzz==3.14.3",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "rich==14.2.0",
    "rich_progress==0.4.0",
    "rsa==4.9.1",
    "shellingham==1.5.4",
    "sniffio==1.3.1",
    "tenacity==9.1.2",
    "tomlkit==0.14.0",
    "tqdm==4.67.1",
    "trove-classifiers==2026.1.14.14",
    "typing_extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.2",
    "virtualenv==20.36.1",
    "websockets==15.0.1",
    "zstandard==0.25.0",
]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
